--- a/watchlist/templates/index_teacher.html
+++ b/watchlist/templates/index_teacher.html
@@ -113,7 +113,7 @@
 							<div class="index_img">
 								<img src="/static/pic/process_.png" alt="">
 							</div>
-							{{g['name']}}
+							{{g['gpu_name']}}
 						</a>
 					</div>
 					{% endif %}
