学生端部分修改 pzq 6.23

--- a/watchlist/templates/my_courses.html
+++ b/watchlist/templates/my_courses.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>GPU管理系统【我的课程】</title>
-	<link rel="stylesheet" href="/static/style.css" />
+	<link rel="stylesheet" href="/static/style_student.css" />
 </head>
 <body>
 	{% for message in get_flashed_messages() %}
