--- a/watchlist/templates/index.html
+++ b/watchlist/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>GPU管理系统【主页】</title>
-	<link rel="stylesheet" href="/static/style.css"/>
+	<link rel="stylesheet" href="/static/style_student.css" />
 </head>
 <body>
 	{% for message in get_flashed_messages() %}
