--- a/watchlist/templates/new_courses.html
+++ b/watchlist/templates/new_courses.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>添加课程</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
+
 <body>
 	{% for message in get_flashed_messages() %}
-	    <div class="alert" style="float:left;margin-left:45%;margin-top:8px;text-align:center;font-size:18px;color:black;width:20%;font-weight:bold;">
-	    	{{ message }}
-	    </div>
+	<div class="alert"
+		style="float:left;margin-left:45%;margin-top:8px;text-align:center;font-size:18px;color:black;width:20%;font-weight:bold;">
+		{{ message }}
+	</div>
 	{% endfor %}
 	<div id="container">
-		<div id="header" >
+		<div id="header">
 			<div id="logo">
-	            <img src="/static/pic/logo.png" alt="">
-	            <span>GPU管理系统</span>
-	        </div>
+				<img src="/static/pic/logo.png" alt="">
+				<span>GPU管理系统</span>
+			</div>
 
 			<div id="other">
 				<form form method="POST" action="/logout/">
@@ -27,7 +30,7 @@
 					<div id="user_name">
 						<span>{{ current_user.username }}</span>
 					</div>
-				</form>			
+				</form>
 			</div>
 		</div>
 
@@ -70,96 +73,100 @@
 					</div>
 				</div>
 			</div>
-            
-            <div id="content">
-                <form method="POST" action="/">
-                    <div id="notice_xxx">
-                        <p>创建课程</p>
-                        
-                        <div id="课程信息" class="new_course_box">
-                            <h>课程信息</h>
-                            <table id="new_course_table">
-                                <br/>
-                                <br/>
-                                
-                                <tr></tr>
-                                <tr>
-                                  <th>课程名称</th>
-                                  <td>
-                                      <input type="text" name="course_name" value="课程名称" style="width:199px">
-                                  </td>
-                                  
-                                </tr>
-                                
-                                <tr>
-                                  <th>授课老师</th>
-                                  <td>
-                                     <input type="text" name="course_teacher" value="授课老师" style="width:199px">
-                                  </td>
-                                  
-                                </tr>
-                                
-                                <tr>
-                                  <th>课程时间</th>
-                                  <td>
-                                      <input type="text" name="time" value="课程时间" style="width:199px">
-                                  </td>
-                                  
-                                </tr>
-                                
-                                <tr>
-                                  <th>课程简介</th>
-                                  <td>
-                                      <textarea name="reworkmes"   style="OVERFLOW:   hidden;height:120px;width:200px"></textarea>
-                                  </td>
-                                  
-                                </tr>
-                                
-                            </table>
-                            
-                        </div>
-                        
-                        <div id="选择GPU" class="new_course_box">
-                            <h>选择GPU</h>
-                            <br/>
-                            <br/>
-                            
-                            <div id="添加GPU" class="new_course_gpu_box">
-                                <h>GPU</h>
-                                <br/>
-                                <font size="3"><input type="checkbox" name="category" value="1080 Ti"/>1080 Ti</font>
-                                <font size="3"><input type="checkbox" name="category" value="2080 Ti"/>2080 Ti</font>
-                            </div>
 
-                           
-                            <table id="new_course_table">
-            
-                                <tr>
-                                  <th>添加新的GPU</th>
-                                  <td>
-                                      <span class="new_course_button" onClick="spanClick1();">添加</span>
-                                  </td>
-                                  
-                                </tr>
-                                
-                            </table>
-                            
-                        </div>
-                        
-                        <div align="center">
-                        <span class="new_course_button" onClick="spanClick1();">确认</span>
-                        </div>
-                        
-                    </div>
-                </form>
-                
-                
-            </div>
+			<div id="content">
+				<form method="POST" action="/my_courses_teacher/">
+					<div id="notice_xxx">
+						<p>创建课程</p>
 
-			
+						<div id="课程信息" class="new_course_box">
+							<h>课程信息</h>
+							<table id="new_course_table">
+								<br />
+								<br />
+
+								<tr></tr>
+								<tr>
+									<th>课程名称</th>
+									<td>
+										<input type="text" name="course_name" value="课程名称" style="width:199px">
+									</td>
+
+								</tr>
+
+
+								<tr>
+
+									<th><br>课程时间</th>
+									<td>
+										<br> <input type="text" name="time" value="xxxx-xxxx学年 第x学期"
+											style="width:199px">
+									</td>
+
+								</tr>
+
+								<tr>
+									<th><br>课程简介</th>
+									<td>
+										<br> <textarea name="intro"   
+											style="OVERFLOW:   hidden;height:120px;width:200px"></textarea>
+									</td>
+
+								</tr>
+
+							</table>
+
+						</div>
+
+						<div id="选择GPU" class="new_course_box">
+							<h>分配GPU</h>
+							
+							<br />
+							<br />
+
+							<div id="添加GPU" class="new_course_gpu_box">
+								{% for g in gpus %}
+								<input type="checkbox" name="gpu-{{g['name']}}">
+								<img style="height:10%" src="/static/pic/gpu.png" alt="">
+								<font size="4">{{g['name']}}</font>
+								<br>
+								{% endfor %}
+
+							</div>
+							
+							<a id="new_notice_submit" href="/new_gpus/" class="button">
+								添加新的GPU
+							</a>
+
+							<!--<script>
+								function spanClick0(){
+									var obj=document.getElementById("user_img_edit");
+									var att=obj.getAttribute("open");
+									if(att!="open"){
+										obj.setAttribute("open","open");
+										}
+									else{
+										obj.removeAttribute("open");
+										}
+									}
+								</script>-->
+
+						</div>
+
+						<div align="center">
+							<input type="submit" class="new_course_button" value="确认创建">
+						</div>
+
+					</div>
+				</form>
+
+
+			</div>
+
+
 		</div>
 
 	</div>
 </body>
+
 </html>
-				
