--- a/watchlist/templates/process_teacher.html
+++ b/watchlist/templates/process_teacher.html
@@ -112,8 +112,8 @@
 
 				
 				<p class="index_box_no" style="clear:both;">--没有更多GPU--</p>
-				<a id="new_notice_submit" href="" class="button" style="margin-right:20px;margin-top:-35px;">
-					新的GPU
+				<a id="new_notice_submit" href="/new_gpus/" class="button" style="margin-right:20px;margin-top:-35px;">
+					添加新的GPU
 				</a>
 			</div>
 
