教师端变动 by hpx

--- a/watchlist/templates/login.html
+++ b/watchlist/templates/login.html
@@ -44,7 +44,7 @@
                                 <!-- <input type="password" id="demo_input" name="password" required style="line-height: 150%;" placeholder="Password"> -->
                                 <!--密码输入框-->
                                 <div class="input_block">
-                                    <img id="demo_img" onclick="hideShowPsw()" src="/static/pic/visible.png">
+                                    <!--<img id="demo_img" onclick="hideShowPsw()" src="/static/pic/visible.png">-->
                                     <input type="password" id="demo_input" placeholder="密码" name="password" required style="line-height: 150%;" style="background-color:transparent; border-width:0;"/>
                                 </div>
 
