--- a/watchlist/templates/index.html
+++ b/watchlist/templates/index.html
@@ -111,7 +111,7 @@
 							<div class="index_img">
 								<img src="/static/pic/process_.png" alt="">
 							</div>
-							xxx课程 - {{ p['name'] }} - in {{ p['gpu_name'] }}
+							{{ p['course_name'] }}课程 - {{ p['name'] }} - in {{ p['gpu_name'] }}
 						</a>
 					</div>
 					{% endfor %}
