--- a/watchlist/templates/process.html
+++ b/watchlist/templates/process.html
@@ -79,7 +79,7 @@
 							<img src="/static/pic/process_.png" alt="">
 						</div>
 						{{ p['name'] }} - in {{ p['gpu_name'] }}
-						<span style="font-weight:normal;">(xxx课程)</span>
+						<span style="font-weight:normal;">({{ p['course_name'] }}课程)</span>
 					</a>
 					<div class="programsum">
 						<p>{{ p['info'] }}</p>
