教师端页面修改 by hpx

--- a/watchlist/templates/course_student.html
+++ b/watchlist/templates/course_student.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>学生选课情况</title>
+	<title>GPU教师端管理系统【学生选课情况】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
