--- a/watchlist/templates/course_xxx_teacher.html
+++ b/watchlist/templates/course_xxx_teacher.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>课程介绍</title>
+	<title>GPU教师端管理系统【课程信息】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
@@ -147,7 +147,7 @@
 							选课学生
 						</span>
 						<a id="new_notice_submit" href="/course_student/{{course['id']}}/" class="button" >
-							修改选课名单
+							导入新的学生
 						</a>
 						{% for r in relations %}
 						<div class="coursegpubox">
