--- a/watchlist/templates/new_courses.html
+++ b/watchlist/templates/new_courses.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>添加课程</title>
+	<title>GPU教师端管理系统【添加课程】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 
