--- a/watchlist/templates/process_xxx_teacher.html
+++ b/watchlist/templates/process_xxx_teacher.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Process</title>
+	<title>GPU教师端管理系统【进程信息】</title>
 	<link rel="stylesheet" href="/static/style_student.css" />
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 
