--- a/watchlist/templates/teacher_notice.html
+++ b/watchlist/templates/teacher_notice.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Notice</title>
+	<title>GPU教师端管理系统【我的通知】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
