--- a/watchlist/templates/teacher_notice_new.html
+++ b/watchlist/templates/teacher_notice_new.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>new notice</title>
+	<title>GPU教师端管理系统【发布新通知】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 
