--- a/watchlist/templates/course_xxx_edit.html
+++ b/watchlist/templates/course_xxx_edit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>course edit</title>
+	<title>GPU教师端管理系统【课程信息修改】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 
