--- a/watchlist/templates/my_courses_teacher.html
+++ b/watchlist/templates/my_courses_teacher.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My Course</title>
+	<title>GPU教师端管理系统【我的课程】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
