--- a/watchlist/templates/process_teacher.html
+++ b/watchlist/templates/process_teacher.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>GPU列表</title>
+	<title>GPU教师端管理系统【GPU列表】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 
