登录 注册 页面更新

--- a/watchlist/templates/signup.html
+++ b/watchlist/templates/signup.html
@@ -35,7 +35,7 @@
                         <tr>
                             <th>UserName：</th>
                             <td>
-                                <!-- <input type="text" name="username" required style="line-height:150%;"> -->
+                                <input type="text" name="username" required style="line-height:150%;"> 
                                 <div class="input_block">
                                     <input type="text" name="username" placeholder="用户名" required style="line-height:150%;"/>
                                 </div>
