--- a/watchlist/templates/signup.html
+++ b/watchlist/templates/signup.html
@@ -35,7 +35,7 @@
                         <tr>
                             <th>UserName：</th>
                             <td>
-                                <input type="text" name="username" required style="line-height:150%;"> 
+                                <!-- <input type="text" name="username" required style="line-height:150%;"> -->
                                 <div class="input_block">
                                     <input type="text" name="username" placeholder="用户名" required style="line-height:150%;"/>
                                 </div>
@@ -47,7 +47,7 @@
                                 <!-- <input type="password" id="demo_input" name="password" required style="line-height: 150%;" placeholder="Password"> -->
                                 <!--密码输入框-->
                                 <div class="input_block">
-                                    <!--<img id="demo_img" onclick="hideShowPsw()" src="/static/pic/visible.png">-->
+                                    <img id="demo_img" onclick="hideShowPsw()" src="/static/pic/visible.png">
                                     <input type="password" id="demo_input" placeholder="密码" name="password" required style="line-height: 150%;" style="background-color:transparent; border-width:0;"/>
                                 </div>
 
